2006-11-14  Jean-Claude Wippler  <jcw@equi4.com>

	* library/mkclvfs.tcl: removed, now part of the vlerq extension again
	* library/pkgIndex.tcl, pkgIndex.tcl.in, Makefile.in: removed mkcl

2006-11-10  Steve Huntley  <stephen.huntley@alum.mit.edu>

	* library/template/templatevfs.tcl: file delete on vfs mount 
	point now causes vfs to unmount ; can now pass empty string
	as arbitrary attribute value

	* library/template/versionvfs.tcl: more efficient directory
	deletion code

2006-10-31  Steve Huntley  <stephen.huntley@alum.mit.edu>

	* library/template/versionvfs.tcl: added code to ensure all
	subfiles of a directory are deleted before dir deletion.

2006-10-29  Steve Huntley  <stephen.huntley@alum.mit.edu>

	Added comments and license info:
	* library/template/globfind.tcl
	* library/template/tdelta.tcl

2006-10-23  Steve Huntley  <stephen.huntley@alum.mit.edu>

	Initial upload of template virtual filesystems in new subfolder:
	* library/template/collatevfs.tcl
	* library/template/deltavfs.tcl
	* library/template/fishvfs.tcl
	* library/template/quotavfs.tcl
	* library/template/templatevfs.tcl
	* library/template/versionvfs.tcl

	Plus helper utlities:
	* library/template/tdelta.tcl - required by deltavfs.tcl
	* library/template/globfind.tcl - required by quotavfs.tcl

	* library/pkgIndex.tcl - added "package ifneeded" statements for
	template virtual filesystems.

2006-09-29  Jeff Hobbs  <jeffh@ActiveState.com>

	* library/httpvfs.tcl (vfs::http::geturl): wrapper around
	http::geturl that does 404 check.

2006-09-19  Jeff Hobbs  <jeffh@ActiveState.com>

	* library/httpvfs.tcl (vfs::http::urlparse): add method to
	deconstruct the url using RFC 3986 semantics.
	(vfs::http::Mount): add support for HTTP basic auth if a user was
	passed in the url

2006-09-15  Jeff Hobbs  <jeffh@ActiveState.com>

	* library/pkgIndex.tcl: bump vfs::http to 0.6
	* library/httpvfs.tcl:  Add urlname encoding to handle the
	translation of "/foo/my file (2).txt" as